--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>guso's portfolio</title>
-    <meta name="author" content="Guso">
-    <meta name="description" content="guso's portfolio for newStart">
-    <link rel="icon" type="image/png" href="images/logo.png">
-    <script
-    src="https://kit.fontawesome.com/6478f529f2.js"
-    crossorigin="anonymous"
-  ></script>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="style.css">
-  <script scr="main.js" defer></script>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BANDAL'S Porfolio</title>
+  <meta name="description" content="Portfolio for bandal's raise up">
+  <meta name="author" content="bandal">
+  <link rel="icon" type="image/png" href="images/logo.png">
+  <script
+  src="https://kit.fontawesome.com/6478f529f2.js"
+  crossorigin="anonymous"
+></script>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
+<script src="main.js" defer></script>
 </head>
 <body>
-
-        
+  
 </body>
 </html>
