--- a/index.html
+++ b/index.html
@@ -34,11 +34,18 @@
         <li class="navbar__menu__item">Contact</li>
       </ul>
   </nav>
-  <!-- About -->
-  <section id="about">
+  <!--home -->
+  <section id="home">
+    <img src="images/profile.png" alt="Bandal's profile phote" class="home__avatar">
+    <h1 class="home__title">Hello, <br> I'm Dream Corder</h1>
+    <h2 class="home__description">The man who want to be fire</h2>
+    <button class="home__contact">CONTACT ME</button>
 
   </section>
-  <!-- Skilss -->
+  <!-- about -->
+  <section id="about">
+  </section>
+  <!-- Skills -->
   <section id="skills">
 
   </section>
@@ -54,6 +61,5 @@
 
 
 
-  zzd/ada
 </body>
 </html>
