--- a/index.html
+++ b/index.html
@@ -100,8 +100,92 @@
 
 
   </section>
+
   <!-- Skills -->
   <section id="skills">
+    <h1>Skills</h1>
+    <h2>Skills & Attributes</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nesciunt fugiat quia perspiciatis ab enim laboriosam, ducimus sit a molestias aspernatur explicabo non neque aliquid at excepturi iusto tenetur dicta.
+    </p>
+
+    <div class="skillset">
+      <div class="skillset__left">
+        <h3 class="skillset__title">Skills</h3>
+        <div class="skill">
+          <div class="skill_description">
+            <span>HTML</span>
+            <span>99%</span>
+            <div class="skill__bar">
+              <div class="skill__value"></div>
+            </div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill_description">
+            <span>css</span>
+            <span>99%</span>
+            <div class="skill__bar">
+              <div class="skill__value"></div>
+            </div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill_description">
+            <span>javascript</span>
+            <span>79%</span>
+            <div class="skill__bar">
+              <div class="skill__value"></div>
+            </div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill_description">
+            <span>react</span>
+            <span>90%</span>
+            <div class="skill__bar">
+              <div class="skill__value"></div>
+            </div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill_description">
+            <span>node.js</span>
+            <span>80%</span>
+            <div class="skill__bar">
+              <div class="skill__value"></div>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+      <div class="skillset__right">
+        <div class="tools">
+          <h3 class="skillset__title">Tools</h3>
+          <ul class="tools__list">
+            <li><span>visual Studio</span></li>
+            <li><span>ios</span></li>
+            <li><span>submarine</span></li>
+            <li><span>sfjkskjf</span></li>
+            <li><span>sdfsdf</span></li>
+            <li><span>sdfsdf</span></li>
+          </ul>
+
+        </div>
+        <div class="Etc">
+          <h3 class="skillset__title">Etc</h3>
+          <ul class="etc__list">
+            <li><span>Git</span></li>
+            <li><span>Scrum</span></li>
+            <li><span>sfsfsdsf</span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+
+
+
 
   </section>
   <!-- Work -->
