--- a/index.html
+++ b/index.html
@@ -189,7 +189,78 @@
 
   </section>
   <!-- Work -->
-  <section id="work"></section>
+  <section id="work">
+    <h1>My work</h1>
+    <h3>Projets</h3>
+    <div class="work__categories">
+      <button class="categorie__btn">All <span class="category__count">8</span></button>
+      <button class="categorie__btn">Fro <span class="category__count">3</span></button>
+      <button class="categorie__btn">Back-end <span class="category__count">3</span>8</span></button>
+      <button class="categorie__btn">Mobile <span class="category__count">2</span></button>
+    </div>
+
+    <div class="work__projects">
+      <a href="#" class="project" target="blank">
+        <img src="images/projets/project1.png" alt="">
+        <div class="project__description">
+          <h3>youtube Site</h3>
+          <span>clone coding with html</span>
+        </div>
+      </a>
+      <a href="#" class="project" target="blank">
+        <img src="images/projets/project2.png" alt="">
+        <div class="project__description">
+          <h3>youtube Site</h3>
+          <span>clone coding with html</span>
+        </div>
+      </a>
+      <a href="#" class="project" target="blank">
+        <img src="images/projets/project3.png" alt="">
+        <div class="project__description">
+          <h3>youtube Site</h3>
+          <span>clone coding with html</span>
+        </div>
+      </a>
+      <a href="#" class="project" target="blank">
+        <img src="images/projets/project4.png" alt="">
+        <div class="project__description">
+          <h3>youtube Site</h3>
+          <span>clone coding with html</span>
+        </div>
+      </a>
+      <a href="#" class="project" target="blank">
+        <img src="images/projets/project5.png" alt="">
+        <div class="project__description">
+          <h3>youtube Site</h3>
+          <span>clone coding with html</span>
+        </div>
+      </a>
+      <a href="#" class="project" target="blank">
+        <img src="images/projets/project6.png" alt="">
+        <div class="project__description">
+          <h3>youtube Site</h3>
+          <span>clone coding with html</span>
+        </div>
+      </a>
+      <a href="#" class="project" target="blank">
+        <img src="images/projets/project7.png" alt="">
+        <div class="project__description">
+          <h3>youtube Site</h3>
+          <span>clone coding with html</span>
+        </div>
+      </a>
+      <a href="#" class="project" target="blank">
+        <img src="images/projets/project8.png" alt="">
+        <div class="project__description">
+          <h3>youtube Site</h3>
+          <span>clone coding with html</span>
+        </div>
+      </a>
+    </div>
+
+
+
+  </section>
   <!--Testimonials   -->
   <section id="testimonials"></section>
   <!-- contact -->
