--- a/index.html
+++ b/index.html
@@ -262,7 +262,28 @@
 
   </section>
   <!--Testimonials   -->
-  <section id="testimonials"></section>
+  <section id="testimonials">
+    <h1>testimonials</h1>
+    <h3>See What they say about me</h3> 
+    <div class="testimonials">
+      <div class="testimonial">
+        <img src="https://import.cdn.thinkific.com/292401/people1-200515-154332.jpg" alt="peaple" class="testimonial__avatar">
+        <div class="testimonial__speech-bubble">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem sunt perferendis facilis temporibus cumque quibusdam inventore earum voluptatum nobis repellendus! Soluta rem ad, eaque cupiditate eius in voluptatibus dignissimos quis.</p>
+          <p class="name">tiger / samsung</p>
+        </div>
+      </div>
+      <div class="testimonial">
+        <img src="https://import.cdn.thinkific.com/292401/people1-200515-154332.jpg" alt="peaple" class="testimonial__avatar">
+        <div class="testimonial__speech-bubble">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem sunt perferendis facilis temporibus cumque quibusdam inventore earum voluptatum nobis repellendus! Soluta rem ad, eaque cupiditate eius in voluptatibus dignissimos quis.</p>
+          <p class="name">tiger / samsung</p>
+        </div>
+      </div>
+    </div>
+
+
+  </section>
   <!-- contact -->
   <section id="contact"></section>
 
