--- a/index.html
+++ b/index.html
@@ -285,7 +285,18 @@
 
   </section>
   <!-- contact -->
-  <section id="contact"></section>
+  <section id="contact">
+    <h1 class="contact__tilte">Let's talk</h1>
+    <h2 class="contact__email">sdfsfdsd.@dsfsdfsf.com</h2>
+    <div class="contact__links">
+      <i class="fa fa-github" aria-hidden="true"></i>
+      <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+
+    </div>
+    <p class="contact__rights">2022 dream coidng -All rights reserved</p>
+    
+
+  </section>
 
 
 
