--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </section>
 
   <!-- about -->
-  <section id="about">
+  <section id="about" class="section">
     <h1>About me</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero pariatur magni facere dolores, aliquam aperiam quam architecto velit temporibus at neque. Explicabo earum quasi doloribus, deleniti tempore exercitationem sunt similique?</p>
 
@@ -86,15 +86,15 @@
     </div>
 
     <div class="about__jobs">
-      <div class="about__job">
+      <div class="job">
         <img src="https://ssl.pstatic.net/sstatic/search/favicon/favicon_191118_pc.ico" alt="">
-        <p class="job__name">naver</p>
-        <p class="job__period">2026</p>
+        <div class="job__description"><p class="job__name">navenavernavernavernavernavernavernaverr</p>
+          <p class="job__period">2026 sep then</p></div>
       </div>
-      <div class="about__job">
+      <div class="job">
         <img src="https://ssl.pstatic.net/sstatic/search/favicon/favicon_191118_pc.ico" alt="">
-        <p class="job__name">naver</p>
-        <p class="job__period">2026</p>
+        <div class="job__description"><p class="job__name">navenavernavernavernavernavernavernaverr</p>
+          <p class="job__period">2026 septs sfjksdjfks</p></div>
       </div>
     </div>
 
@@ -102,7 +102,7 @@
   </section>
 
   <!-- Skills -->
-  <section id="skills">
+  <section id="skills" class="section">
     <h1>Skills</h1>
     <h2>Skills & Attributes</h2>
     <p>
@@ -189,7 +189,7 @@
 
   </section>
   <!-- Work -->
-  <section id="work">
+  <section id="work" class="section">
     <h1>My work</h1>
     <h3>Projets</h3>
     <div class="work__categories">
@@ -262,7 +262,7 @@
 
   </section>
   <!--Testimonials   -->
-  <section id="testimonials">
+  <section id="testimonials" class="section">
     <h1>testimonials</h1>
     <h3>See What they say about me</h3> 
     <div class="testimonials">
@@ -285,7 +285,7 @@
 
   </section>
   <!-- contact -->
-  <section id="contact">
+  <section id="contact" class="section">
     <h1 class="contact__tilte">Let's talk</h1>
     <h2 class="contact__email">sdfsfdsd.@dsfsdfsf.com</h2>
     <div class="contact__links">
