--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
         <li class="navbar__menu__item">testimonials</li>
         <li class="navbar__menu__item">Contact</li>
       </ul>
+
+      <!-- toggle btn -->
+      <button class="navbar__toggle">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+
+      </button>
+
   </nav>
   <!--home -->
   <section id="home">
@@ -200,100 +207,106 @@
 
   <!-- Work -->
   <section id="work" class="section">
-    <h1>My work</h1>
-    <h3>Projets</h3>
-    <div class="work__categories">
-      <button class="category__btn active">All <span class="category__count">8</span></button>
-      <button class="category__btn">Froend <span class="category__count">3</span></button>
-      <button class="category__btn">Back-end <span class="category__count">3</span></span></button>
-      <button class="category__btn">Mobile <span class="category__count">2</span></button>
+    <div class="section__container">
+      <h1>My work</h1>
+      <h3>Projets</h3>
+      <div class="work__categories">
+        <button class="category__btn active">All <span class="category__count">8</span></button>
+        <button class="category__btn">Froend <span class="category__count">3</span></button>
+        <button class="category__btn">Back-end <span class="category__count">3</span></span></button>
+        <button class="category__btn">Mobile <span class="category__count">2</span></button>
+      </div>
+  
+      <div class="work__projects">
+        <a href="#" class="project" target="blank">
+          <img src="images/projets/project1.png" alt="" class="project-img">
+          <div class="project__description">
+            <h3>youtube Site</h3>
+            <span>clone coding with html</span>
+          </div>
+        </a>
+        <a href="#" class="project" target="blank">
+          <img src="images/projets/project2.png" alt="" class="project-img">
+          <div class="project__description">
+            <h3>youtube Site</h3>
+            <span>clone coding with html</span>
+          </div>
+        </a>
+        <a href="#" class="project" target="blank" >
+          <img src="images/projets/project3.png" alt="" class="project-img">
+          <div class="project__description">
+            <h3>youtube Site</h3>
+            <span>clone coding with html</span>
+          </div>
+        </a>
+        <a href="#" class="project" target="blank">
+          <img src="images/projets/project4.png" alt="" class="project-img">
+          <div class="project__description">
+            <h3>youtube Site</h3>
+            <span>clone coding with html</span>
+          </div>
+        </a>
+        <a href="#" class="project" target="blank">
+          <img src="images/projets/project5.png" alt="" class="project-img">
+          <div class="project__description">
+            <h3>youtube Site</h3>
+            <span>clone coding with html</span>
+          </div>
+        </a>
+        <a href="#" class="project" target="blank">
+          <img src="images/projets/project6.png" alt="" class="project-img">
+          <div class="project__description">
+            <h3>youtube Site</h3>
+            <span>clone coding with html</span>
+          </div>
+        </a>
+        <a href="#" class="project" target="blank">
+          <img src="images/projets/project7.png" alt="" class="project-img">
+          <div class="project__description">
+            <h3>youtube Site</h3>
+            <span>clone coding with html</span>
+          </div>
+        </a>
+        <a href="#" class="project" target="blank">
+          <img src="images/projets/project8.png" alt="" class="project-img">
+          <div class="project__description">
+            <h3>youtube Site</h3>
+            <span>clone coding with html</span>
+          </div>
+        </a>
+      </div>
+  
     </div>
-
-    <div class="work__projects">
-      <a href="#" class="project" target="blank">
-        <img src="images/projets/project1.png" alt="" class="project-img">
-        <div class="project__description">
-          <h3>youtube Site</h3>
-          <span>clone coding with html</span>
-        </div>
-      </a>
-      <a href="#" class="project" target="blank">
-        <img src="images/projets/project2.png" alt="" class="project-img">
-        <div class="project__description">
-          <h3>youtube Site</h3>
-          <span>clone coding with html</span>
-        </div>
-      </a>
-      <a href="#" class="project" target="blank" >
-        <img src="images/projets/project3.png" alt="" class="project-img">
-        <div class="project__description">
-          <h3>youtube Site</h3>
-          <span>clone coding with html</span>
-        </div>
-      </a>
-      <a href="#" class="project" target="blank">
-        <img src="images/projets/project4.png" alt="" class="project-img">
-        <div class="project__description">
-          <h3>youtube Site</h3>
-          <span>clone coding with html</span>
-        </div>
-      </a>
-      <a href="#" class="project" target="blank">
-        <img src="images/projets/project5.png" alt="" class="project-img">
-        <div class="project__description">
-          <h3>youtube Site</h3>
-          <span>clone coding with html</span>
-        </div>
-      </a>
-      <a href="#" class="project" target="blank">
-        <img src="images/projets/project6.png" alt="" class="project-img">
-        <div class="project__description">
-          <h3>youtube Site</h3>
-          <span>clone coding with html</span>
-        </div>
-      </a>
-      <a href="#" class="project" target="blank">
-        <img src="images/projets/project7.png" alt="" class="project-img">
-        <div class="project__description">
-          <h3>youtube Site</h3>
-          <span>clone coding with html</span>
-        </div>
-      </a>
-      <a href="#" class="project" target="blank">
-        <img src="images/projets/project8.png" alt="" class="project-img">
-        <div class="project__description">
-          <h3>youtube Site</h3>
-          <span>clone coding with html</span>
-        </div>
-      </a>
-    </div>
-
+   
 
 
   </section>
+
+
+
+  
   <!--Testimonials   -->
   <section id="testimonials" class="section">
-    <h1>testimonials</h1>
-    <h3>See What they say about me</h3> 
-    <div class="testimonials">
-      <div class="testimonial">
-        <img src="https://import.cdn.thinkific.com/292401/people1-200515-154332.jpg" alt="peaple" class="testimonial__avatar">
-        <div class="testimonial__speech-bubble">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem sunt perferendis facilis temporibus cumque quibusdam inventore earum voluptatum nobis repellendus! Soluta rem ad, eaque cupiditate eius in voluptatibus dignissimos quis.</p>
-          <p class="name">tiger / samsung</p>
+    <div class="section__container"><h1>testimonials</h1>
+      <h3>See What they say about me</h3> 
+      <div class="testimonials">
+        <div class="testimonial">
+          <img src="https://import.cdn.thinkific.com/292401/people1-200515-154332.jpg" alt="peaple" class="testimonial__avatar">
+          <div class="testimonial__speech-bubble">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem sunt perferendis facilis temporibus cumque quibusdam inventore earum voluptatum nobis repellendus! Soluta rem ad, eaque cupiditate eius in voluptatibus dignissimos quis.</p>
+            <p class="name"><a href="">bandal</a> /samsung</p>
+          </div>
         </div>
-      </div>
-      <div class="testimonial">
-        <img src="https://import.cdn.thinkific.com/292401/people1-200515-154332.jpg" alt="peaple" class="testimonial__avatar">
-        <div class="testimonial__speech-bubble">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem sunt perferendis facilis temporibus cumque quibusdam inventore earum voluptatum nobis repellendus! Soluta rem ad, eaque cupiditate eius in voluptatibus dignissimos quis.</p>
-          <p class="name">tiger / samsung</p>
+        <div class="testimonial">
+           <div class="testimonial__speech-bubble">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem sunt perferendis facilis temporibus cumque quibusdam inventore earum voluptatum nobis repellendus! Soluta rem ad, eaque cupiditate eius in voluptatibus dignissimos quis.</p>
+            <p class="name"><a href="">bandal</a> /samsung</p>
+          </div>
+          <img src="https://import.cdn.thinkific.com/292401/people1-200515-154332.jpg" alt="peaple" class="testimonial__avatar">
         </div>
-      </div>
-    </div>
-
-
+      </div></div>
   </section>
+
   <!-- contact -->
   <section id="contact" class="section">
     <h1 class="contact__tilte">Let's talk</h1>
@@ -304,6 +317,7 @@
 
     </div>
     <p class="contact__rights">2022 dream coidng -All rights reserved</p>
+    </div>
     
 
   </section>
