--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
-  <script scr="main.js" defer></script>
+  <script defer src="main.js"></script>
 
 </head>
 <body>
@@ -41,6 +41,9 @@
       </button>
 
   </nav>
+
+
+
   <!--home -->
   <section id="home">
     <img src="images/profile.png" alt="Bandal's profile phote" class="home__avatar">
