--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
 
   <!--home -->
   <section id="home">
-    <img src="images/profile.png" alt="Bandal's profile phote" class="home__avatar">
-    <h1 class="home__title">Hello, <br> I'm Dream Corder</h1>
-    <h2 class="home__description">The man who want to be fire</h2>
-    <button class="home__contact">CONTACT ME</button>
+    <div class="home__container"><img src="images/profile.png" alt="Bandal's profile phote" class="home__avatar">
+      <h1 class="home__title">Hello, <br> I'm Dream Corder</h1>
+      <h2 class="home__description">The man who want to be fire</h2>
+      <button class="home__contact">CONTACT ME</button></div>
+    
 
   </section>
 
