--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <h3>Projets</h3>
       <div class="work__categories"
      >
-        <button class="category__btn active"
+        <button class="category__btn selected"
         data-filter="*">All <span class="category__count">8</span></button>
         <button class="category__btn"
         data-filter="Front-end">Front-end <span class="category__count">3</span></button>
